Create chapters tex files

--- a/thesis.tex
+++ b/thesis.tex
@@ -45,8 +45,8 @@
 
 \frontmatter
 
-\title{Σχεδίαση και Υλοποίηση μιας Καταπληκτικής Γλώσσας Προγραμματισμού}
-\author{Ρεβέκκα Παλαιολόγου\\Φωτόπουλος Ηλίας}
+\title{Σχεδίαση και Υλοποίηση cloud συστήματος για εθελοντική αιμοδοσία}
+\author{Φωτόπουλος Ηλίας\\Ρεβέκκα Παλαιολόγου}
 \date{Σεπτέμβριος 2015}
 \datedefense{08}{10}{2015}
 
@@ -82,6 +82,14 @@
 \mainmatter
 
 \include{intro}
+
+\include{blood_donation}
+\include{system_analysis}
+\include{technology_stack}
+\include{implementation}
+\include{interoperability}
+\include{discussion}
+
 \include{conclusion}
 
 %%%  Bibliography
