--- a/references.bib
+++ b/references.bib
@@ -1,188 +1,307 @@
-@article{church-1932-spfl,
-  author="A. Church",
-  title="A Set of Postulates for the Foundations of Logic",
-  journal="Annals of Mathematics",
-  volume=33,
-  pages="346--366",
-  number=1,
-  year=1932
+% This file was created with JabRef 2.10.
+% Encoding: UTF-8
+
+
+@Article{aging,
+  Title                    = {Humanity's Aging},
+  Author                   = {National Institute on Aging},
+  Journal                  = {Global Health and Aging},
+  Year                     = {2011},
+
+  Owner                    = {ilias},
+  Timestamp                = {2015.09.23}
 }
 
-@article{church-1933-spfl,
-  author="A. Church",
-  title="A Set of Postulates for the Foundations of Logic",
-  journal="Annals of Mathematics",
-  volume=34,
-  pages="839--864",
-  number=2,
-  year=1933
-}
-  
-@phdthesis{girard-1972-ifecaos,
-  author="J.-Y. Girard",
-  title="Interpr{\'e}tation Fonctionelle et {\'E}limination des "
-       # "Coupures Dans l'Arithm{\'e}tique d'Ordre Sup{\'e}rieur",
-  school="Universit{\'e} Paris 7",
-  year=1972
+@Article{Borgman2012,
+  Title                    = {The conundrum of sharing research data},
+  Author                   = {Borgman, Christine L.},
+  Journal                  = {J Am Soc Inf Sci Tec},
+  Year                     = {2012},
+  Number                   = {6},
+  Pages                    = {1059--1078},
+  Volume                   = {63},
+
+  __markedentry            = {[ilias:6]},
+  ISSN                     = {1532-2890},
+  Keywords                 = {research data sets, collaboration, information reuse, information policy, motivation},
+  Owner                    = {ilias},
+  Timestamp                = {2015.09.29},
+  Url                      = {http://dx.doi.org/10.1002/asi.22634}
 }
 
-@article{girard-1989-pt,
-  author="J.-Y. Girard and Y. Lafont and P. Taylor",
-  title="Proofs and Types",
-  journal="Tracks in Theoretical Computer Science",
-  year=1989
+@InProceedings{1019587,
+  Title                    = {An HL7/CDA framework for the design and deployment of telemedicine services},
+  Author                   = {Chronaki, C.E. and Lelis, P. and Demou, C. and Tsiknakis, M. and Orphanoudakis, S.C.},
+  Booktitle                = {Engineering in Medicine and Biology Society, 2001. Proceedings of the 23rd Annual International Conference of the IEEE},
+  Year                     = {2001},
+  Pages                    = {3504-3507 vol.4},
+  Volume                   = {4},
+
+  Doi                      = {10.1109/IEMBS.2001.1019587},
+  ISSN                     = {1094-687X},
+  Keywords                 = {ISO standards;document handling;electrocardiography;groupware;health care;medical information systems;middleware;open systems;telemedicine;Clinical Document Architecture;DICOM 3;HL7/CDA framework;ISO standard;SCP-ECG;WebOnCOLL collaboration infrastructure;cardiology;clinical document templates;clinical documents;deployment;design;emerging telemedicine protocols;exchanged clinical content;guidelines;healthcare settings;imaging;interoperability;medical specialties;medical standards;middleware services;open standards;physical setting;regional healthcare networks;remote consultation services;specifications;telemedicine services;Biomedical imaging;Collaborative work;DICOM;Electrocardiography;Guidelines;ISO standards;Medical services;Middleware;Protocols;Telemedicine}
 }
 
-@inproceedings{reynolds-1974-ttts,
-  author="John. C. Reynolds",
-  title="Towards a Theory of Type Systems",
-  booktitle="Lecture Notes in Computer Science",
-  year=1974,
-  editor="Ehring et al.",
-  volume=19,
-  pages="408--425",
-  publisher="Springer-Verlag"
+@Article{TRF:TRF04402,
+  Title                    = {Recruiting blood donors: challenges and opportunities},
+  Author                   = {Davey, Richard J.},
+  Journal                  = {Transfusion},
+  Year                     = {2004},
+  Number                   = {4},
+  Pages                    = {597--600},
+  Volume                   = {44},
+
+  Doi                      = {10.1111/j.0041-1132.2004.04402.x},
+  ISSN                     = {1537-2995},
+  Publisher                = {Blackwell Science Inc},
+  Url                      = {http://dx.doi.org/10.1111/j.0041-1132.2004.04402.x}
 }
 
-@article{boehm-1985-astlpta,
-  author="C. B{\"o}hm and A. Bernarducci",
-  title="Automatic Synthesis of Typed $\lambda$-Programs on Term "
-       # "Algebras",
-  journal="Theoretical Computer Science",
-  volume=39,
-  number="2--3",
-  pages="135--154",
-  month=aug,
-  year=1985
+@Article{VOX:VOX5295,
+  Title                    = {Blood Safety in the Developing World and WHO Initiatives},
+  Author                   = {Dhingra, Dr Neelam},
+  Journal                  = {Vox Sanguinis},
+  Year                     = {2002},
+  Pages                    = {173--177},
+  Volume                   = {83},
+
+  Doi                      = {10.1111/j.1423-0410.2002.tb05295.x},
+  ISSN                     = {1423-0410},
+  Publisher                = {Blackwell Publishing Ltd},
+  Url                      = {http://dx.doi.org/10.1111/j.1423-0410.2002.tb05295.x}
 }
 
-@phdthesis{paulin-1989-epscc,
-  author="C. Paulin-Mohring",
-  title="Extraction de Programmes Dans le Calcul des Constructions",
-  month=jan,
-  school="Universit{\'e} Paris 7",
-  year=1989,
-  url="http://www.lri.fr/~paulin/these.ps.gz"
+@Electronic{EKEA,
+  Title                    = {Blood donation statistics},
+  Author                   = {E.KE.A},
+  Organization             = {E.KE.A},
+  Url                      = {http://www.ekea.gr/%CE%B4%CE%B5%CE%BB%CF%84%CE%B9%CE%BF-%CF%84%CF%85%CF%80%CE%BF%CF%85/},
+
+  Owner                    = {ilias},
+  Timestamp                = {2015.09.26}
 }
 
-@inproceedings{pfenning-1990-pmfps,
-  author="F. Pfenning and C. Paulin-Mohring",
-  booktitle="Proceedings of Mathematical Foundations of "
-           # "Programming Semantics",
-  note="technical report CMU-CS-89-209",
-  publisher="Springer-Verlag",
-  address = "Berlin",
-  series="Lecture Notes in Computer Science",
-  volume=442,
-  title="Inductively defined types in the Calculus of Constructions",
-  year=1990
+@Electronic{ekeaQuestionnaire,
+  Title                    = {Donor Questionaire},
+  Author                   = {E.KE.A},
+  Organization             = {E.KE.A},
+  Url                      = {http://www.ekea.gr/donor-questionaire/},
+
+  Owner                    = {ilias},
+  Timestamp                = {2015.09.29}
 }
 
-@incollection{paulin-1993-iddcrp,
-  author= "Christine Paulin-Mohring",
-  title = "Inductive Definitions in the System {Coq}: Rules and Properties",
-  booktitle = "Proceedings of the 1st Int.\ Conf.\ on Typed Lambda Calculi "
-           # "and Applications, {TLCA}'93, Utrecht, The Netherlands, "
-	   # "16--18 March 1993",
-  volume = 664,
-  publisher = "Springer-Verlag",
-  address = "Berlin",
-  editor = "M. Bezem and J. F. Groote",
-  pages = "328--345",
-  year = 1993,
-  url = "citeseer.nj.nec.com/paulin-mohring92inductive.html"
+@Electronic{epsos,
+  Title                    = {epSOS Services},
+  Author                   = {epSOS},
+  Organization             = {epSOS},
+  Url                      = {http://www.epsos.eu/epsos-services.html},
+
+  Owner                    = {ilias},
+  Timestamp                = {2015.09.29}
 }
 
-@InProceedings{shao-2002-tscb,
-  author = 	 "Z. Shao and B. Saha and V. Trifonov and N. Papaspyrou",
-  title = 	 "A Type System for Certified Binaries",
-  booktitle = 	 "Proceedings of the 29th Annual Symposium on Principles of "
-               # "Programming Languages (POPL 2002)",
-  year =	 2002,
-  pages =	 "217--232",
-  address =	 "Portland, OR, USA",
-  month =	 jan
+@Article{Fragoulakis,
+  Title                    = {The Cost of Blood Collection in Greece: An Economic Analysis},
+  Author                   = {Fragoulakis, Vassilis and Stamoulis, Kostas and Grouzi, Elisabeth and Maniadakis, Nikolaos},
+  Journal                  = {Clinical Therapeutics},
+  Number                   = {7},
+  Pages                    = {1028--1036.e5},
+  Volume                   = {36},
+
+  Booktitle                = {Clinical Therapeutics},
+  Comment                  = {doi: 10.1016/j.clinthera.2014.05.003},
+  Doi                      = {10.1016/j.clinthera.2014.05.003},
+  Owner                    = {ilias},
+  Publisher                = {Elsevier},
+  Timestamp                = {2015.09.23},
+  Url                      = {http://dx.doi.org/10.1016/j.clinthera.2014.05.003}
 }
 
-@InProceedings{sellink-1994-vpaptt,
-  author = 	 "M. P. A. Sellink",
-  title = 	 "Verifying process algebra proofs in type theory",
-  booktitle = 	 "Proceedings of the International Workshop on Semantics "
-               # " of Specipication Languages (SOSL 1993)",
-  year =	 1994,
-  editor =	"D. J. Andrews and J. F. Groote and C. A. Middelburg",
-  publisher = 	"Springer"
+@Article{TheGameOfLife,
+  Title                    = {The Game of Life: Designing a Gamification System to Increase Current Volunteer Participation and Retention in Volunteer-based Nonprofit Organizations},
+  Author                   = {Fu, Ya Chiang},
+  Journal                  = {Undergraduate Student Research Awards},
+  Year                     = {2011},
+
+  Owner                    = {ilias},
+  Timestamp                = {2015.09.14}
 }
 
-@inproceedings{necula-1997-pcc,
-  author="G. Necula",
-  title="Proof-Carrying Code",
-  booktitle="Proceedings of the 24th Annual Symposium on Principles of "
-           # "Programming Languages (POPL 1997)",
-  pages="106--119",
-  publisher="ACM Press",
-  address="New York",
-  year=1997,
-  month=jan
+@Article{filloKivernisews,
+  Title                    = {Ministerial directive Υ4γ-ΟΙΚ.121672-2009},
+  Author                   = {Government of Greece},
+  Journal                  = {Greek Government Gazette},
+  Year                     = {2009},
+
+  Owner                    = {ilias},
+  Timestamp                = {2015.09.23}
 }
 
-@inproceedings{necula-1996-skertc,
-  author="G. Necula and P. Lee",
-  title="Safe Kernel Extensions without Run-Time Checking",
-  booktitle="Proceedings of the 2nd USENIX Symposium on Operating "
-	# "System Design and Implementation", 
-  year="1996",
-  publisher="USENIX Association",
-  pages="229--243"
+@Electronic{grnetBlood,
+  Title                    = {Central Electronic Management Services for the National Blood Donor Registry},
+  Author                   = {Grnet},
+  Organization             = {Grnet},
+  Url                      = {https://www.grnet.gr/en/node/400},
+
+  Owner                    = {ilias},
+  Timestamp                = {2015.09.27}
 }
 
-@phdthesis{necula-1998-cp,
-  title = "Compiling with Proofs",
-  author = "G. Necula",
-  school = "Carnegie Mellon University",
-  year = 1998,
-  month=sep,
-  number = "CMU-CS-98-154"
+@Article{Lemmens2005,
+  Title                    = {Why don’t young people volunteer to give blood? An investigation of the correlates of donation intentions among young nondonors},
+  Author                   = {Lemmens, K.P.H. and Abraham, C. and Hoekstra, T. and Ruiter, R.A.C. and De Kort, W.L.A.M. and Brug, J. and Schaalma, H.P.},
+  Journal                  = {Transfusion},
+  Year                     = {2005},
+  Number                   = {6},
+  Pages                    = {945--955},
+  Volume                   = {45},
+
+  ISSN                     = {1537-2995},
+  Owner                    = {ilias},
+  Publisher                = {Blackwell Science Inc},
+  Timestamp                = {2015.09.26},
+  Url                      = {http://dx.doi.org/10.1111/j.1537-2995.2005.04379.x}
 }
 
-@inproceedings{appel-2000-smtmipcc,
-  author="Andrew W. Appel and Amy P. Felty",
-  title="A Semantic Model of Types and Machine Instructions for "
-	# "Proof-Carrying Code",
-  booktitle="Proceedings of the 27th Annual Symposium on Principles of "
-           # "Programming Languages (POPL 2000)",
-  year=2000,
-  publisher = "ACM Press",
-  pages="243--253"
+@Article{Lemmens2008,
+  Title                    = {Identifying blood donors willing to help with recruitment},
+  Author                   = {Lemmens, K. P. H. and Abraham, C. and Ruiter, R. A. C. and Veldhuizen, I. J. T. and Bos, A. E. R. and Schaalma, H. P.},
+  Journal                  = {Vox Sanguinis},
+  Year                     = {2008},
+  Number                   = {3},
+  Pages                    = {211--217},
+  Volume                   = {95},
+  ISSN                     = {1423-0410},
+  Keywords                 = {blood donors, donor recruitment, intention, theory of planned behaviour},
+  Owner                    = {ilias},
+  Publisher                = {Blackwell Publishing Ltd},
+  Timestamp                = {2015.09.26},
+  Url                      = {http://dx.doi.org/10.1111/j.1423-0410.2008.01079.x}
 }
 
-@InProceedings{appel-2001-fpcc,
-  author = 	 "A. W. Appel",
-  title = 	 "Foundational Proof-Carrying Code",
-  booktitle = 	 "Proceedings of the 16th Annual IEEE Symposium on "
-	       # "Logic in Computer Science",
-  pages =	 "247--258",
-  year =	 2001,
-  month =	 jun
+@Article{Marantidou2007,
+  Title                    = {Factors that motivate and hinder blood donation in Greece},
+  Author                   = {Marantidou, O and Loukopoulou, L and Zervou, E and Martinis, G and Egglezou, A and Fountouli, P and Dimoxenous, P and Parara, M and Gavalaki, M and Maniatis, A},
+  Journal                  = {Transfusion Medicine (Oxford, England)},
+  Year                     = {2007},
+
+  Month                    = aug,
+  Number                   = {6},
+  Pages                    = {443--450},
+  Volume                   = {17},
+
+  Abstract                 = {Donations in Greece are insufficient to cover the high transfusion needs arising from large numbers of thalassaemia and sickle cell anaemia patients and the implementation of new surgical techniques. Efforts to achieve self-sufficiency, and to render blood supplies safer and manageable must focus on recruiting and retaining more volunteer donors and on converting the large pool of replacement donors. The aim of the study was to gain insight into public perception regarding the risks of donation and transfusion and to identify the factors that would motivate more people in Greece to regularly donate blood. Questionnaires were distributed to 1600 donors at the blood bank and visitors to hospitals at 11 locations across the country. Data on demographics, donation behaviour, incentives, risk perception and attitudes towards donation and transfusion were analysed separately for volunteer and replacement donors and non-donors. The results showed that women and young people donate the least in Greece. Also, many donors do not donate because they are not reminded to. A small percentage of donors confessed to having concealed part of the truth to background questions. Overall, incentives to donate were considered important and included future availability of blood for self or family, paid leave from work and free blood tests. Recruitment and retention efforts should include better communication with current donors, and raising awareness among eligible donors. Staff should be educated in soliciting information from potential donors, and incentives should be better aligned to avoid conflict with ethical values and ensure honesty in the prescreening process.},
+  Comment                  = {18067648[pmid]},
+  ISSN                     = {1365-3148},
+  Owner                    = {ilias},
+  Publisher                = {Blackwell Publishing Ltd},
+  Timestamp                = {2015.09.23},
+  Url                      = {http://www.ncbi.nlm.nih.gov/pmc/articles/PMC2440532/}
 }
 
-@inproceedings{harper-1995-cpita,
-  author="Robert Harper and Greg Morrisett",
-  title="Compiling Polymorphism Using Intensional Type Analysis",
-  booktitle="Proceedings of the 22nd Annual Symposium on Principles of "
-           # "Programming Languages (POPL 1995)",
-  publisher="ACM Press",
-  year="1995",
-  pages="130--141"
+@Article{Misje2005,
+  Title                    = {Motivation, recruitment and retention of voluntary non-remunerated blood donors: a survey-based questionnaire study},
+  Author                   = {Misje, A. H. and Bosnes, V. and Gåsdal, O. and Heier, H. E.},
+  Journal                  = {Vox Sanguinis},
+  Year                     = {2005},
+  Number                   = {4},
+  Pages                    = {236--244},
+  Volume                   = {89},
+
+  __markedentry            = {[ilias:]},
+  ISSN                     = {1423-0410},
+  Keywords                 = {altruism, blood donor recruitment, blood donors, motivation for donating blood},
+  Owner                    = {ilias},
+  Publisher                = {Blackwell Science Ltd},
+  Timestamp                = {2015.09.27},
+  Url                      = {http://dx.doi.org/10.1111/j.1423-0410.2005.00706.x}
 }
 
-@inproceedings{morrisett-1998-sftal,
-  author="Greg Morrisett and David Walker and Karl Crary and Neal Glew",
-  title="From {S}ystem {F} to Typed Assembly Language",
-  booktitle="Proceedings of the 25th Annual Symposium on Principles of "
-           # "Programming Languages (POPL 1998)",
-  pages="85--97",
-  publisher="ACM Press",
-  year=1998,
-  month=jan
+@Electronic{bloodUK,
+  Title                    = {About Give Blood},
+  Author                   = {NHSBT, Give blood},
+  Organization             = {NHSBT, Give blood},
+  Url                      = {http://www.blood.co.uk/},
+
+  Owner                    = {ilias},
+  Timestamp                = {2015.09.28}
 }
+
+@Conference{cloudInteroperability,
+  Title                    = {Cloud Computing and Interoperability in Healthcare Information Systems},
+  Author                   = {Oana-Sorina Lupşe, Mihaela Marcella Vida, Lăcrămioara Stoicu-Tivadar},
+  Booktitle                = {INTELLI 2012 : The First International Conference on Intelligent Systems and Applications},
+  Year                     = {2012},
+
+  Owner                    = {ilias},
+  Timestamp                = {2015.09.29}
+}
+
+@Electronic{WorldHealth,
+  Title                    = {More voluntary blood donations essential},
+  Author                   = {World Health Organization},
+  Organization             = {World Health Organization},
+  Url                      = {http://www.who.int/mediacentre/news/releases/2012/blood_donation_20120614/en/},
+  Year                     = {2012},
+
+  Owner                    = {ilias},
+  Timestamp                = {2015.09.14}
+}
+
+@Article{FQS511,
+  Title                    = {Central Questions of Anonymization: A Case Study of Secondary Use of Qualitative Data},
+  Author                   = {Denise Thomson and Lana Bzdel and Karen Golden-Biddle and Trish Reay and Carole Estabrooks},
+  Journal                  = {Forum Qualitative Sozialforschung / Forum: Qualitative Social Research},
+  Year                     = {2005},
+  Number                   = {1},
+  Volume                   = {6},
+
+  Abstract                 = {Anonymization—the removal of identifying information from data—is one way of preparing data for secondary use. This process has not received much attention from scholars, but close examination shows that it is full of methodological, ethical and theoretical tensions. Qualitative research focuses on how people live and act in very particular, situated contexts. Removing identifying information also, inevitably, removes contextual information that has potential value to the researcher. We propose to present a case study of working with anonymized data on the research project, Knowledge Utilization and Policy Implementation, a five-year program funded by the Canadian Institutes of Health Research. This project involves the secondary use of qualitative data sets from multiple separate research projects across Canada. Based on this case study, we provide useful recommendations that address some of the central questions of anonymization and consider the strengths and weaknesses of the anonymization process.
+URN: urn:nbn:de:0114-fqs0501297},
+  ISSN                     = {1438-5627},
+  Keywords                 = {ethical practice; collaborative research; confidentiality; privacy},
+  Url                      = {http://www.qualitative-research.net/index.php/fqs/article/view/511}
+}
+
+@InProceedings{6249994,
+  Title                    = {Improving the interoperability of healthcare information systems through HL7 CDA and CCD standards},
+  Author                   = {Vida, M. and Lupse, O. and Stoicu-Tivadar, L.},
+  Booktitle                = {Applied Computational Intelligence and Informatics (SACI), 2012 7th IEEE International Symposium on},
+  Year                     = {2012},
+  Month                    = {May},
+  Pages                    = {157-161},
+
+  Doi                      = {10.1109/SACI.2012.6249994},
+  Keywords                 = {cloud computing;cost reduction;health care;medical information systems;network operating systems;nonprofit organisations;open systems;paediatrics;ASP. NET pages;Azure platform;HL7 CCD standard;HL7 CDA standard;HL7 clinical document architecture standard;HL7 continuity of care document standard;Visual Studio .NET 2010 toolbox;cloud application;cloud computing;cost reduction;database tables;healthcare information system interoperability improvement;life expectancy;medical act;medical error reduction;medical informatics;medical information system;medical personal;pediatrics application;seamless care;standardized communication;Charge coupled devices;Databases;Immune system;Informatics;Standards;Tiles}
+}
+
+@Article{Williamson,
+  Title                    = {Challenges in the management of the blood supply},
+  Author                   = {Williamson, Lorna M and Devine, Dana V},
+  Journal                  = {The Lancet},
+  Year                     = {2013},
+  Number                   = {9880},
+  Pages                    = {1866--1875},
+  Volume                   = {381},
+
+  Booktitle                = {The Lancet},
+  Comment                  = {doi: 10.1016/S0140-6736(13)60631-5},
+  Doi                      = {10.1016/S0140-6736(13)60631-5},
+  Owner                    = {ilias},
+  Publisher                = {Elsevier},
+  Timestamp                = {2015.09.14},
+  Url                      = {http://dx.doi.org/10.1016/S0140-6736(13)60631-5}
+}
+
+@Book{GamificationDesign,
+  Title                    = {Gamification by design},
+  Author                   = {Gabe Zichermann},
+  Editor                   = {Gamification by design},
+  Publisher                = {O'Reilly Media},
+  Year                     = {2011},
+
+  Owner                    = {ilias},
+  Timestamp                = {2015.09.27}
+}
+
