--- a/thesis.tex
+++ b/thesis.tex
@@ -94,7 +94,7 @@
 
 %%%  Bibliography
 
-\bibliographystyle{softlab-thesis}
+\bibliographystyle{Styles/softlab-thesis}
 \bibliography{references}
 
 
